RESOLVED FIXED81958
REGRESSION (r105453): Crash when handling touch events
https://bugs.webkit.org/show_bug.cgi?id=81958
Summary REGRESSION (r105453): Crash when handling touch events
Yong Li
Reported 2012-03-22 13:29:54 PDT
In the case touched document is deleted by touchstart and touchmove, WebKit will crash when processing the subsequent touch events on the same node. This is a regression of r105453, Bug 75506
Attachments
The patch (2.96 KB, patch)
2012-03-23 11:44 PDT, Yong Li
no flags
changelog updated (3.12 KB, patch)
2012-04-02 11:27 PDT, Yong Li
tonikitoo: review+
try again (3.16 KB, patch)
2012-04-17 07:38 PDT, Yong Li
yong.li.webkit: commit-queue-
Again (3.16 KB, patch)
2012-04-17 07:44 PDT, Yong Li
no flags
Yong Li
Comment 1 2012-03-23 07:51:05 PDT
I've got a fix and a manual test, working on a auto layout test
Yong Li
Comment 2 2012-03-23 11:44:15 PDT
Created attachment 133524 [details] The patch I'm adding a manual test. To cover this with a layout test, we have to make DRT support sending a few touch points with different states (pressed, moved, released) in one shot. I'll open another bug for that
Yong Li
Comment 3 2012-04-02 11:27:48 PDT
Created attachment 135139 [details] changelog updated
Min Qin
Comment 4 2012-04-02 11:38:43 PDT
Thanks for fixing this. Looks good to me
Antonio Gomes
Comment 5 2012-04-02 12:57:34 PDT
I will work on the blocking bug 82075 to make it possible to layout test it. (In reply to comment #2) > Created an attachment (id=133524) [details] > The patch > > I'm adding a manual test. To cover this with a layout test, we have to make DRT support sending a few touch points with different states (pressed, moved, released) in one shot. I'll open another bug for that
WebKit Review Bot
Comment 6 2012-04-02 13:16:06 PDT
Comment on attachment 135139 [details] changelog updated Rejecting attachment 135139 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/12311665
Allan Sandfeld Jensen
Comment 7 2012-04-17 07:10:15 PDT
(In reply to comment #6) > (From update of attachment 135139 [details]) > Rejecting attachment 135139 [details] from commit-queue. > > Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 > > ERROR: /mnt/git/webkit-commit-queue/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). > > Full output: http://queues.webkit.org/results/12311665 I think the line "Review By" was accidentally removed from the ChangeLog of Manual tests, this failed to merge in the viewer which failed the commit bot. It should be a simple update.
Yong Li
Comment 8 2012-04-17 07:38:17 PDT
Created attachment 137534 [details] try again
Yong Li
Comment 9 2012-04-17 07:44:50 PDT
WebKit Review Bot
Comment 10 2012-04-17 08:20:21 PDT
Comment on attachment 137536 [details] Again Clearing flags on attachment: 137536 Committed r114379: <http://trac.webkit.org/changeset/114379>
Note You need to log in before you can comment on or make changes to this bug.