REGRESSION (r105453): Crash when handling touch events https://bugs.webkit.org/show_bug.cgi?id=81958

Patch by Yong Li <yoli@rim.com> on 2012-04-17
Reviewed by Antonio Gomes.

.:

Add a manual test for this issue because DumpRenderTree
currently cannot send a group of touch points with
different touch states in one shot.

* ManualTests/resources/iframe-reloaded-on-touch.html: Added.
* ManualTests/touch-stale-iframe-crash.html: Added.

Source/WebCore:

Always perform sanity checks when handling every touch point
because the node and document may have been destroyed or detached.

ManualTests/touch-stale-iframe-crash.html added.
(DumpRenderTree doesn't support transiting touch states in one shot yet)

* page/EventHandler.cpp:
(WebCore::EventHandler::handleTouchEvent):

Canonical link: https://commits.webkit.org/101649@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114379 268f45cc-cd09-0410-ab3c-d52691b4dbfc